Home styles modified to prevent overflow in x axis

--- a/src/vistas/Home.module.scss
+++ b/src/vistas/Home.module.scss
@@ -14,6 +14,8 @@
 
 .mainTag {
   display: flex;
+  overflow-x: hidden;
+  max-width: 100vw;
   flex-direction: column;
   justify-content: center;
   align-items: center;
